# eam

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  stock-ana.ini
docs/: analyzer-architecture.md  data-collectors.md
docs/plans/: 2025-01-25-eam-design.md  2025-01-25-eam-requirements.md  2025-01-25-phase1-mvp-implementation.md  2025-01-25-phase2-signals-and-alerts.md  2025-01-26-phase3-data-collectors.md  2026-02-04-report-redesign-impl.md  2026-02-04-report-redesign.md
src/: __init__.py  config.py  main.py
src/analyzers/: __init__.py  base.py  capital_flow.py  commodity.py  macro.py  market_environment.py  portfolio_health.py  precious_metals.py  price_alerts.py  watchlist_analyzer.py
src/api/: ai.py  analyzers.py  auth.py  collection_report.py  holdings.py  portfolio.py  quotes.py  reports.py  schemas.py  signals.py  watchlist.py
src/cli/: __init__.py  collect.py
src/collectors/: base.py  registry.py  sina_quote.py
src/db/: database.py  models.py  models_auth.py  models_insider.py  models_institutional.py  models_market_data.py
src/scheduler/: scheduler.py
src/services/: ai_advisor.py  ai_summarizer.py  analyzer_runner.py  auth.py  llm_client.py  report_generator.py  storage.py  telegram.py  weekly_report.py
tests/analyzers/: __init__.py  test_base_analyzer.py  test_macro.py  test_precious_metals.py  test_price_alerts.py
tests/api/: test_ai.py  test_analyzers_api.py  test_holdings.py  test_portfolio.py  test_quotes.py  (+3 more)
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
(+74 files in other folders)
